--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
             type="button"
             class="bg-green-500 hover:bg-green-700 cursor-pointer flex gap-2 py-4 text-white justify-center items-center rounded-lg font-bold text-sm leading-[110%] tracking-[0px]"
           >
-            <img class="w-4 h-4" src="./images/icon-cart.svg" />Add to Cart
+            <img
+              class="w-4 h-4"
+              src="./images/icon-cart.svg"
+              alt="Cart Image"
+            />Add to Cart
           </button>
         </div>
       </article>
